fix(app): overflow of the footer.

--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,5 @@
 }
 
 /* body {
-  min-width: 1100px;
+  max-width: 100vw;
 } */
